# program-of-thought

./: .gitignore  .secrets.baseline  README.md  pyproject.toml
.devcontainer/: devcontainer.json
scripts/: setup_dev_environment.sh
src/program_of_thought/: __init__.py  cli.py  code_execution.py  core.py  evaluation.py  other.py  program_of_thought.py  utils.py
